[gd_scene load_steps=2 format=3 uid="uid://byl7mgh8ljwlt"]

[ext_resource type="Script" uid="uid://w2fxq6pe5y2q" path="res://main.gd" id="1_fli7h"]

[node name="Main" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_fli7h")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_bottom = 43.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 20
alignment = 1

[node name="LoadProductsButton" type="Button" parent="MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 80)
layout_mode = 2
text = "Load products"

[node name="PurchaseConsumableButton" type="Button" parent="MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 80)
layout_mode = 2
disabled = true
text = "Purchase consumable"

[node name="PurchaseNonConsumableButton" type="Button" parent="MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 80)
layout_mode = 2
disabled = true
text = "Purchase non consumable"

[node name="PurchaseSubscriptionButton" type="Button" parent="MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 80)
layout_mode = 2
disabled = true
text = "Purchase subscription"

[node name="PurchaseSubscriptionNorenewButton" type="Button" parent="MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 130)
layout_mode = 2
disabled = true
text = "Purchase subscription 
not renewable"

[node name="FetchActiveAutoRenewableSubscriptionsButton" type="Button" parent="MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 130)
layout_mode = 2
disabled = true
text = "Fetch active subscriptions
auto-renewable"

[node name="FetchAutoRenewableTransactionCountsButton" type="Button" parent="MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 130)
layout_mode = 2
disabled = true
text = "Fetch transaction counts
auto-renewable"

[node name="RestoreButton" type="Button" parent="MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 80)
layout_mode = 2
text = "Restore purchases"

[node name="StatusLabel" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
horizontal_alignment = 1

[connection signal="pressed" from="MarginContainer/VBoxContainer/LoadProductsButton" to="." method="_on_load_products_button_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/PurchaseConsumableButton" to="." method="_on_purchase_consumable_button_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/PurchaseNonConsumableButton" to="." method="_on_purchase_non_consumable_button_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/PurchaseSubscriptionButton" to="." method="_on_purchase_subscription_button_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/PurchaseSubscriptionNorenewButton" to="." method="_on_purchase_subscription_norenew_button_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/FetchActiveAutoRenewableSubscriptionsButton" to="." method="_on_fetch_active_auto_renewable_subscriptions_button_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/FetchAutoRenewableTransactionCountsButton" to="." method="_on_fetch_auto_renewable_transaction_counts_button_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/RestoreButton" to="." method="_on_restore_button_pressed"]
